force-app/main/default/objects/Job__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Where is this job source from for the Hiring Company</description>
    <label>Primary Account Source</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>