force-app/main/default/objects/Job__c/fields/Company_Location__c.field-meta.xml
<CustomField>
    <fullName>Company_Location__c</fullName>
    <description>Location of job</description>
    <label>Company Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>