force-app/main/default/objects/Job__c/fields/Federal_Income_Tax__c.field-meta.xml
<CustomField>
    <fullName>Federal_Income_Tax__c</fullName>
    <description>Federal Income Tax Rate</description>
    <label>Federal Income Tax</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>