force-app/main/default/objects/Job__c/fields/Federal_Income_Tax_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Federal_Income_Tax_Bracket__c</fullName>
    <label>Federal Income Tax Bracket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0 to $11,925</fullName>
            </value>
            <value>
                <fullName>$11,926 to $48,475</fullName>
            </value>
            <value>
                <fullName>$48,476 to $103,350</fullName>
            </value>
            <value>
                <fullName>$103,351 to $197,300</fullName>
            </value>
            <value>
                <fullName>$197,301 to $250,525</fullName>
            </value>
            <value>
                <fullName>$250,526 to $626,350</fullName>
            </value>
            <value>
                <fullName>$626,351 and above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>