force-app/main/default/objects/Job__c/fields/Job_Link__c.field-meta.xml
<CustomField>
    <fullName>Job_Link__c</fullName>
    <description>Link to job posting</description>
    <label>Job Link</label>
    <type>Url</type>
</CustomField>