force-app/main/default/objects/Job__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Job Title</description>
    <label>Job Title</label>
    <type>TextArea</type>
</CustomField>