force-app/main/default/objects/Job__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Job location</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>