force-app/main/default/objects/Job__c/fields/Medicare_Withholding__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Withholding__c</fullName>
    <description>Medicare Withholding Rate</description>
    <label>Medicare Withholding</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>