force-app/main/default/objects/Job__c/fields/Monthly_Take_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Take_Home_Pay__c</fullName>
    <description>Monthly Take-Home Pay after Federal Income Tax, Social Security and Medicare Withholdings</description>
    <label>Monthly Take-Home Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>