force-app/main/default/objects/Job__c/fields/Salary_Offered__c.field-meta.xml
<CustomField>
    <fullName>Salary_Offered__c</fullName>
    <description>Salary</description>
    <label>Starting Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>