force-app/main/default/objects/Job__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Jobs (Secondary Contact)</relationshipLabel>
    <relationshipName>Jobs_Secondary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>