force-app/main/default/objects/Job__c/fields/Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Social_Security__c</fullName>
    <description>Social Security Rate</description>
    <label>Social Security</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>