force-app/main/default/objects/Job__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Full time, part time, contract</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>