force-app/main/default/objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Company__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Company_Location__c</columns>
    <columns>Salary_Range__c</columns>
    <columns>Salary_Offered__c</columns>
    <columns>External_Id__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>